# links.campen.co

./: .gitignore  .gitmodules  LICENSE.txt  README.md  Vagrantfile  manage.sh  package-lock.json  package.json  requirements.txt  run.py  run.sh  tailwind.config.js  webpack.config.js
.circleci/: config.yml
LinkShortener/: __init__.py  api.py  forms.py  models.py  views.py
LinkShortener/templates/: base.html  index.html  index.html.predatatables  login.html
ansible/: ansible.cfg  hosts.ini  inventory.ini  playbook.yml
ansible/host_vars/: development.yml
app/: pyproject.toml  requirements.txt
app/api/: urls.py
app/api/views/: link.py
app/app/: __init__.py  admin.py  api.py  apps.py  forms.py  models.py  settings.py  urls.py  views.py
app/app/migrations/: 0001_initial.py
app/app/settings/: base.py  development.py
app/app/templates/: base.html  index.html  login.html  macros.html  privacy.html  tos.html
app/app/templates/app/: index.html  list.html  login.html
app/app/templates/partials/: footer.html  header.html  messages.html
app/app/templatetags/: app_tags.py
app/migrations/: env.py
app/migrations/versions/: 1ec5e054d9cc_.py
app/scripts/: add_user.py
app/static/css/: main.css
app/static/js/: vendors~main.js
app/users/: models.py
config/: example_config.py
docker/: .env.dev  Dockerfile  docker-compose.dev.yml
frontend/js/: index.js  main.js
old_app/: pyproject.toml
old_app/app/: __init__.py
old_app/app/templates/: login.html  privacy.html  tos.html
scripts/: add_user.py  manage.py
webpack/: webpack.config.js
(+8 files in other folders)
