[tool.poetry]
name = "link-shortener"
version = "0.5.0"
description = "App for generating short urls."
authors = ["Richard Campen <richard@campen.co"]

[tool.poetry.dependencies]
python = "~3.8"
Django = "~3.1"
psycopg2-binary = "~2.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
