[tool.poetry]
name = "link-shortener"
version = "0.4.0"
description = "App for generating short urls."
authors = ["Richard Campen <richard@campen.co"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.2"
Flask-Login = "^0.5.0"
Flask-Migrate = "^2.5.3"
Flask-Script = "^2.0.6"
Flask-SQLAlchemy = "^2.4.1"
Flask-WTF = "^0.14.3"
psycopg2-binary = "^2.8.5"
Authlib = "^0.14.1"
requests = "^2.23.0"
passlib = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
